--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v2
       with:
-        role-to-assume: arn:aws:iam::529088282444:role/my-github-action-aws-role
+        role-to-assume: arn:aws:iam::529088282444:role/my-git-aws-action
         aws-region: ${{ env.AWS_REGION }}
 
     - name: Setup Terraform
@@ -39,7 +39,7 @@ jobs:
         
     
     - name: terraform init
-      working-directory: ./modukles/networking
+      working-directory: ./modules/networking
       run: terraform init
 
     - name: terraform fmt
