added terraform cleanup file-dev8-deletet

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,3 +57,12 @@ jobs:
       working-directory: ./modules/networking
       run: terraform apply -auto-approve tfplan   
 
+    
+    - name: terraform plan Destroy
+      working-directory: ./modules/networking
+      run: terraform plan -destroy -out=tfplan-destroy
+
+    - name: terraform apply Destroy
+      working-directory: ./modules/networking
+      run: terraform apply -auto-approve tfplan-destroy    
+
